--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
         </div>
     </section>
 
-    <section id="about-us" class="my-5 py-5">
+    <section id="about-us" class="py-5">
         <div style="overflow: hidden;">
             <div class="vertical-element" data-aos="zoom-out">
                 <div class="container">
@@ -236,13 +236,8 @@
                         <div class="col-md-6">
                             <div class="section-element p-5">
                                 <h2 class="element-title text-uppercase mb-4">Who are we?</h2>
-                                <p>The beginning of our journey vel tellus Turpis purus, gravida orci, fringilla a. Ac
-                                    sed
-                                    eu fringilla odio mi. Consequat pharetra at magna imperdiet cursus ac faucibus sit
-                                    libero. Ultricies quam nunc, lorem sit lorem urna, pretium aliquam ut. In vel, quis
-                                    donec dolor id in. Pulvinar commodo mollis diam sed facilisis at magna imperdiet
-                                    cursus
-                                    ac faucibus sit libero.</p>
+                                <p>Supreme Nomads Detailing sparked from a shared passion for ensuring that every vehicle we touch is left in the most pristine condition possible through our detailing services. No matter the make or model, we deliver the highest level of care in every detail. Whether innovating with new techniques or meeting new enthusiasts, we strive for a single outcome: to make you proud of your ride. We are grateful for our support systems from our families, friends, mentors, the car community, and most importantly, you, the customer that allows us to deliver on our passion. Through continuous feedback and unconditional support, we are able to further our endeavors in being perfectionists in the art of auto detailing. Thank you to our team for their unwavering support, and to our loyal customers for making this journey possible.
+</p>
                             </div>
                         </div>
                     </div>
@@ -256,15 +251,8 @@
                     <div class="row d-flex align-items-center justify-content-between">
                         <div class="col-md-6">
                             <div class="section-element p-5">
-                                <h2 class="element-title text-uppercase mb-4">Choose us for best services</h2>
-                                <p>We are nunc, lorem sit lorem urna, pretium aliquam ut. In vel, quis donec dolor id
-                                    in.
-                                    Pulvinar commodo mollis diam sed facilisis at magna imperdiet cursus ac faucibus sit
-                                    libero. Dignissim lacus, turpis ut suspendisse vel tellus. Turpis purus, gravida
-                                    orci,
-                                    fringilla a. Ac sed eu fringilla odio mi. Consequat pharetra at magna imperdiet
-                                    cursus
-                                    ac faucibus sit libero.</p>
+                                <h2 class="element-title text-uppercase mb-4 about-supreme">CHOOSE US FOR THE SUPREME TREATMENT</h2>
+                                <p>At Supreme Nomads, perfection is the heart of how we operate. A clean environment allows for some peace amongst the chaos in the day to day, and that extends to your second largest investment, your vehicle. Between work, family, road trips, or just leisure driving, it’s easy to use your vehicle, but hard to find time to keep it clean. We understand this need and seek to find a personalized plan for every customer.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
