--- a/index.html
+++ b/index.html
@@ -119,6 +119,85 @@
                   href="services.html"
                   >Our Services</a
                 >
+                            <!-- <li class="nav-item dropdown">
+                <a
+                  class="nav-link text-white text-uppercase mx-2 px-3 mb-2 mb-lg-0 dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  href="#"
+                  role="button"
+                  aria-expanded="false"
+                  href="#"
+                  >Pages</a
+                >
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="about.html" class="dropdown-item text-uppercase"
+                      >About <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="blog.html" class="dropdown-item text-uppercase"
+                      >Blog <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="blog-single.html"
+                      class="dropdown-item text-uppercase"
+                      >Blog-Single
+                      <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="booking.html" class="dropdown-item text-uppercase"
+                      >Booking <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="services.html" class="dropdown-item text-uppercase"
+                      >Services <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="services-single.html"
+                      class="dropdown-item text-uppercase"
+                      >Service-Single
+                      <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="project.html" class="dropdown-item text-uppercase"
+                      >Project <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="pricing.html" class="dropdown-item text-uppercase"
+                      >Pricing <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="contact.html" class="dropdown-item text-uppercase"
+                      >Contact <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="team.html" class="dropdown-item text-uppercase"
+                      >Our Team <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="review.html" class="dropdown-item text-uppercase"
+                      >Reviews <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href="faq.html" class="dropdown-item text-uppercase"
+                      >FAQs <span class="badge bg-secondary">Pro</span></a
+                    >
+                  </li>
+                </ul>
+              </li> -->
               </li>
               <li class="nav-item">
                 <a
@@ -497,7 +576,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -530,7 +609,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>
 
                     <a
@@ -622,7 +701,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -659,7 +738,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>
 
                     <a
@@ -759,7 +838,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -796,7 +875,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>         
                     <a
                       href="booking.html"
@@ -871,6 +950,10 @@
                 </div>
               </div>
             </div>
+                  <!-- Disclaimer -->
+       <div class="px-3 pb-5">
+      <span class="disclaimer mt-5">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
+    </div>
             <div class="allServicesDiv text-center">
               <a
                 href="services.html"
@@ -886,6 +969,8 @@
         </div>
       </div>
     </section>
+  
+
 
   <!-- FOOTER -->
 <section id="footer">
