--- a/services.html
+++ b/services.html
@@ -291,7 +291,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup> &reg; </sup> Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -324,7 +324,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>
 
                     <a
@@ -416,7 +416,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -453,7 +453,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>
 
                     <a
@@ -553,7 +553,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Iron Removal Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> 6 Month Ceramic Wax*</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Door Jambs Washed</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Shampoo and Conditioner</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Headliner Spot Cleaning</p>
@@ -590,7 +590,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                     </div>         
                     <a
                       href="booking.html"
@@ -803,7 +803,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup> Window Treatment</p>
                     </div>
 
                     <a
@@ -903,7 +903,7 @@
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Tire Dressing</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Foam Bath & Hand Wash</p>
                       <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Windows & Door Jams Cleaned</p>
-                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X&reg; Window Treatment</p>
+                      <p><iconify-icon icon="mdi:square-medium" class="bullet-icon price-tick"></iconify-icon> Rain-X<sup class="sup-line"> &reg; </sup>Window Treatment</p>
                     </div>
 
                     <a
@@ -1023,10 +1023,15 @@
       </div>
     </section>
 
+    <!-- Disclaimer -->
+       <div class="px-5 pt-3">
+      <span class="disclaimer mt-5 text-center">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
+    </div>
+
     <!-- Maintenance Plans -->
-    <section id="maintenancePrice" class="py-5 maintenance-packages">
+    <section id="maintenancePrice" class="pb-5 maintenance-packages">
         <div class="container py-5" data-aos="zoom-out">
-          <h5 class="display-5 mb-5">Maintenance Plans</h5>
+          <h2 class="display-4 mb-5">Maintenance Plans</h2>
           <p>Our maintenance plans are designed to keep your vehicle looking like the day you got it detailed for an extended period of time. Let us take care of your vehicle for a 6 or 12 month timeframe prepaid! Maintenance plans are only available with the <a href="#paintPrice"> protection packages</a>. Each wash must be scheduled within 40 days of the previous one or you lose the wash. If our calendar cannot accommodate the 40 day time frame, we will work with you to choose the next available slot.</p> 
               <div class="row py-4">
                 <div class="col-lg-6 pb-4">
@@ -1080,7 +1085,7 @@
 
                 <h4 class="my-3">Headlight Restoration</h4>
                 <p>
-                  Your headlights are essential to the safety of you and others. If your headlights have started to fog or yellow from oxidation, let us restore them to their original clarity. Added benefits include increased night time visibility and increased resale value!
+                  Over time, the exposure to sunlight, weather, and environment, can cause headlight lenses to deteriorate, reducing their effectiveness. Headlight restoration is the process used to remove oxidation, yellowing, and cloudiness from vehicle headlights to improve their appearance and performance. Let us restore your headlights to their original clarity. Added benefits include increased night time visibility and increased resale value!
                 </p>
               </div>
             </div>
@@ -1092,10 +1097,9 @@
                   class="service-icon"
                   icon="material-symbols:cleaning-bucket-outline-rounded"
                 ></iconify-icon>
-                <h4 class="my-3">Stain Removal*</h4>
+                <h4 class="my-3">Stain Removal* (Extractor Vacuum)</h4>
                 <p>
-                  NEEDS COPYRIGHT Velit sed ante in nisl amet sapien. Mauris a ullamcorper ut
-                  iaculis. Et massa non eu ac.
+                  For some of the deeper stains in your vehicle's upholstery and carpets, shampoo and conditioner may not be enough. If you have excessive stains, deeply trapped dirt, or even smells coming from the fabrics in your vehicle, this would be a great add on service to an Interior Package. This also pairs well with an Ozone Treatment to completely refresh your interior.
                 </p>
               </div>
             </div>
@@ -1108,10 +1112,9 @@
                   icon="fa6-solid:car-on"
                 ></iconify-icon>
 
-                <h4 class="my-3">Odor Removal</h4>
+                <h4 class="my-3">Odor Removal (Ozone Treatments)</h4>
                 <p>
-                  NEEDS COPYRIGHT In tincidunt in tortor ligula risus nulla blandit eget mauris
-                  ete pharetraeget etem.
+                  Ozone, also known as O3 is aimed to attack smells at a molecular level. Ozone bonds to odor causing molecules effectively killing the smells. Ozone can also drown out organisms and bacteria that may be living in some of the deeper crevices of your vehicle. If you’ve been unable to identify the source of unpleasant odors in your vehicle, this treatment might just do the trick for you!
                 </p>
               </div>
             </div>
@@ -1124,9 +1127,9 @@
                   icon="bxs:car-wash"
                 ></iconify-icon>
 
-                <h4 class="my-3">Extractor Vacuum</h4>
+                <h4 class="my-3">Trim Restoration</h4>
                 <p>
-                  For some of the deeper stains in your vehicle's upholstery and carpets, shampoo and conditioner may not be enough. If you have an excess number of stains or deeper stains, or even have smells that are coming from the fabrics in your vehicle, this would be a great add on service to an Interior Package. This may also pair well with an Ozone Treatment.
+                  Cladding, garnishes, rubber seals, grilles, and other non-painted parts deal with harsh weather conditions. What was once shining black trims, are now faded gray after years of taking a beating. We can restore the look of your vehicle's trim accents to get it looking like new!
                 </p>
               </div>
             </div>
@@ -1138,27 +1141,13 @@
                   class="service-icon"
                   icon="mdi:tire"
                 ></iconify-icon>
-                <h4 class="my-3">Ozone Treatments</h4>
-                <p>
-                  Ozone, also known as O3 is aimed to attack smells at a molecular level. Ozone bonds to odor causing molecules effectively killing the smells. Ozone can also drown out organisms and bacteria that may be living in some of the deeper crevices of your vehicle. If you’ve been unable to identify the source of unpleasant odors in your vehicle, this treatment might just do the trick for you!
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4 my-3">
-              <div
-                class="services-content text-center border py-3 py-md-5 px-3"
-              >
-                <iconify-icon
-                  class="service-icon"
-                  icon="simple-icons:coronaengine"
-                ></iconify-icon>
                 <h4 class="my-3">Cabin Air Filter Replacement*</h4>
                 <p>
                   Most manufacturers recommend replacing your cabin air filter at least once every year. In some cases, a cabin air filter should be replaced every six months, especially if the vehicle regularly travels through highly polluted areas or if the driver and/or passengers have allergies. We recommend letting us change this along with an Interior Package, Odor Removal, or Stain Treatment!
                 </p>
               </div>
             </div>
-                        <div class="col-md-6 col-lg-4 my-3">
+            <div class="col-md-6 col-lg-4 my-3">
               <div
                 class="services-content text-center border py-3 py-md-5 px-3"
               >
@@ -1182,7 +1171,7 @@
                 ></iconify-icon>
                 <h4 class="my-3">Undercarriage Cleaning</h4>
                 <p>
-                  If you’ve recently been on a long road trip, and are in need of cleaning dirt, grime, and/or salt out from under your vehicle, this could help! Benefits include reduced risk of rust and corrosion, reduced suspension wear, and more!
+                  Whether you’ve recently been through salt, been on a road trip, or off roading, the underside of your vehicle may have accumulated dirt, grime, and/or salt. An undercarriage cleaning is the perfect solution to remove unwanted debris. Benefits include reduced risk of rust and corrosion, reduced suspension wear, and more!
                 </p>
               </div>
             </div>
@@ -1196,8 +1185,21 @@
                 ></iconify-icon>
                 <h4 class="my-3">Paint Touch Up</h4>
                 <p>
-                  NEEDS COPYRIGHT In tincidunt in tortor ligula risus nulla blandit eget mauris
-                  ete pharetraeget etem.
+                  Daily driving can expose your car to harsh conditions, leading to rock chips, scratches from mailboxes, or even scrapes from shopping carts. For minor paint damage, touch-up paint offers a cost-effective alternative to a full respray. While it won't completely erase the blemish, it will significantly reduce its visibility and shield your vehicle's metal from the elements.
+                </p>
+              </div>
+            </div>
+                        <div class="col-md-6 col-lg-4 my-3">
+              <div
+                class="services-content text-center border py-3 py-md-5 px-3"
+              >
+                <iconify-icon
+                  class="service-icon"
+                  icon="simple-icons:coronaengine"
+                ></iconify-icon>
+                <h4 class="my-3">Pet Hair Removal</h4>
+                <p>
+                  We all love to take our furry friends with us wherever we go. In many cases, this means dander and hair gets left behind on the carpets and seats. Pet hair removal requires additional time, tools, and resources. Depending on the carpet quality and hair attribute, this can be a difficult process to restore the interior to a factory state.
                 </p>
               </div>
             </div>
