--- a/project.html
+++ b/project.html
@@ -222,7 +222,7 @@
 
     <section id="gallery">
 
-        <div class="container my-3 py-5">
+        <div class="container mb-3 py-5">
             <h2 class="display-4 text-center mb-5">Explore Our Work</h2>
                 <div class="isotope-container">
                     <div class="item polish col-md-4">
