--- a/index.html
+++ b/index.html
@@ -113,31 +113,28 @@
                   >Gallery</a
                 >
               </li>
-              <li class="nav-item">
+                            <li class="nav-item">
                 <a
                   class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
                   href="services.html"
-                  >Our Services</a
+                  >Services</a
                 >
+              </li>
+              <!-- dropdown -->
                             <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link text-white text-uppercase mx-2 px-3 mb-2 mb-lg-0 dropdown-toggle"
                   data-bs-toggle="dropdown"
-                  href="#"
+                  href="services.html"
                   role="button"
                   aria-expanded="false"
-                  href="#"
-                  >Pages</a
+
+                  >Our Services</a
                 >
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="about.html" class="dropdown-item text-uppercase"
-                      >About <span class="badge bg-secondary">Pro</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="blog.html" class="dropdown-item text-uppercase"
-                      >Blog <span class="badge bg-secondary">Pro</span></a
+                    <a href="services.html" class="dropdown-item text-uppercase"
+                      >Detailing</a
                     >
                   </li>
                   <li>
@@ -198,7 +195,6 @@
                   </li>
                 </ul>
               </li> -->
-              </li>
               <li class="nav-item">
                 <a
                   class="nav-link text-white text-uppercase mx-2 px-1 mb-2 mb-lg-0"
@@ -302,13 +298,14 @@
             <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/home-hero-video.mp4" type="video/mp4">
         </video>
 
-  <div class="container padding-large">
-     <video class="hero-video" autoplay muted loop playsinline>
-            <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-home.mp4">
-        </video>
-    <div class="row">
-      <div class="col-12 col-md-10 offset-md-1 text-center px-3 px-sm-5">
-        <p class="hero-text">
+
+        <div class="container padding-large d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+  <video class="hero-video" autoplay muted loop playsinline>
+    <source src="https://supreme-nomads-website.s3.us-east-1.amazonaws.com/hero-home.mp4">
+  </video>
+  <div class="row justify-content-center">
+    <div class="hero-text-div col-12 col-md-10 text-center px-3 px-sm-5">
+              <p class="hero-text">
           At <span class="sndName">Supreme Nomads Detailing</span>, our top priority is you.
         </p>
         <p class="hero-text mb-4">
@@ -322,9 +319,10 @@
             <iconify-icon icon="tabler:arrow-down" class="arrow-icon"></iconify-icon>
           </button>
         </a>
-      </div>
     </div>
   </div>
+</div>
+
 </section>
 
 <!-- Quick Links -->
@@ -565,7 +563,7 @@
               aria-labelledby="regular-tab"
               tabindex="0"
             >
-              <div class="row py-4">
+              <div class="row pt-4">
                 <div class="col-lg-3 pb-4">
                   <div class="py-5 plan-post text-center">
                     <p class="header-top">Premium</p>
@@ -685,7 +683,7 @@
               aria-labelledby="medium-tab"
               tabindex="0"
             >
-              <div class="row py-4">
+              <div class="row pt-4">
                 <div
                   class="col-lg-3 col-6 pb-4"
                   data-aos="fade-up"
@@ -822,7 +820,7 @@
               aria-labelledby="van-tab"
               tabindex="0"
             >
-              <div class="row py-4">
+              <div class="row pt-4">
                 <div
                   class="col-lg-3 col-6 pb-4"
                   data-aos="fade-up"
@@ -951,8 +949,8 @@
               </div>
             </div>
                   <!-- Disclaimer -->
-       <div class="px-3 pb-5">
-      <span class="disclaimer mt-5">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
+       <div class="px-3 pb-5 text-center">
+      <span class="disclaimer">*Wax Disclaimer: Wax protection longevity varies based on vehicle condition, storage, and maintenance. Pre-existing paint damage or aftermarket paint may also affect the wax's lifespan. For optimal results, regular care and garaging are recommended.</span>
     </div>
             <div class="allServicesDiv text-center">
               <a
@@ -984,20 +982,20 @@
       <!-- Contact Info -->
       <div class="col-12 col-lg-4 mb-4 mb-lg-0 text-center text-start">
         <h5 class="mobile footer-heading1">Mobile Detailing Unit</h5>
-        <h6 class="mobile footer-heading2 pt-2">We come to you!</h6>
-        <div class="contact-info mt-3">
+        <h5 class="mobile footer-heading2 pt-2">We come to you!</h5>
+        <div class="contact-info mt-2">
           <p class="mb-1">
             <a href="tel:+1704-561-1927" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
               <iconify-icon icon="mdi:phone" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>704-561-1927
             </a>
           </p>
-          <p class="mb-1">
+          <p class="mt-3">
             <a href="mailto:info@supremenomads.com" class="text-decoration-none" target="_blank" rel="noopener noreferrer">
               <iconify-icon icon="mdi:email" style="vertical-align: middle; margin-right: 6px;"></iconify-icon>info@supremenomads.com
             </a>
           </p>
         </div>
-        <div class="d-flex justify-content-center align-items-start mt-3">
+        <div class="d-flex justify-content-center align-items-start mt-2">
           <!-- social icons -->
           <a href="https://www.tiktok.com/@supremenomads704" target="_blank" rel="noopener noreferrer">
             <iconify-icon class="social-icon-footer pe-4" icon="ri:tiktok-fill"></iconify-icon>
