changed about section

--- a/about.html
+++ b/about.html
@@ -252,7 +252,8 @@
                         <div class="col-md-6">
                             <div class="section-element p-5">
                                 <h2 class="element-title text-uppercase mb-4 about-supreme">CHOOSE US FOR THE SUPREME TREATMENT</h2>
-                                <p>At Supreme Nomads, perfection is the heart of how we operate. A clean environment allows for some peace amongst the chaos in the day to day, and that extends to your second largest investment, your vehicle. Between work, family, road trips, or just leisure driving, it’s easy to use your vehicle, but hard to find time to keep it clean. We understand this need and seek to find a personalized plan for every customer.</p>
+                                <p>At Supreme Nomads, perfection is at the heart of how we operate. A clean environment allows for some peace amongst the chaos in the day to day, and that extends to your second-largest investment, your vehicle. Between work, family, road trips, or just leisure driving, it’s easy to use your vehicle, but hard to find time to keep it clean. We understand this need and seek to find a personalized detailing plan for every customer.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-6">
