--- a/services.html
+++ b/services.html
@@ -1072,7 +1072,7 @@
     <section id="process">
       <div style="overflow: hidden">
         <div class="container mt-5 pt-5" data-aos="zoom-out">
-          <h2 class="display-4 mb-5">Add On Services</h2>
+          <h2 class="display-4 mb-5">Add-On Services</h2>
           <div class="row">
             <div class="col-md-6 col-lg-4 my-3">
               <div
