--- a/services-single.html
+++ b/services-single.html
@@ -224,7 +224,7 @@
     </section>
 
     <div class="px-5 pb-5">
-      <p class="header-top mt-5 text-center">As John C. Maxwell wisely said, “You never really know something until you teach it to someone else.” These words resonate deeply with us at Supreme Nomads Detailing. Even as a respected name in the Charlotte auto industry, we're committed to continuous improvement and sharing our expertise. Stay tuned as we develop the Supreme Nomads Academy, where we'll offer insights and training to elevate your detailing skills! Click below to subscribe for updates and be the first to know when we launch!</p>
+      <p class="header-top mx-5 my-5 text-center">As Richard Feynman says, "If you want to master something, teach it.". Whether you’re looking to start your own detailing business or just want to learn some tips and tricks to take care of your own vehicle in between details, you’ve come to the right spot. Even if you have no interest in detailing, we encourage you to stick around as we share our passion for automobiles and the art of preserving them. We’ve got something for all of you. Want to know when this section releases? Join the mailing list.</p>
     </div>
 
 <!-- Footer -->
